feat: add TimeoutInMillis to HttpApi events (#1450)
